--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "dom-to-image-more": "2.8.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "bootstrap": "^4.3.1",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap-button-loader": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "16.9.11",
