--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/alexdevero/react-meme-generator.git"
   },
-  "homepage": "https://github.com/alexdevero/react-meme-generator#readme",
+  "homepage": "./",
   "bugs": {
     "url": "https://github.com/alexdevero/react-meme-generator/issues"
   },
